Doesn'tt throw any exception // No UI // Java 10